fix: aligns glance bar and button

--- a/client/dashboard/app/styles/pages/Dashboard.scss
+++ b/client/dashboard/app/styles/pages/Dashboard.scss
@@ -337,6 +337,16 @@ div.kz-dashboard {
   }
 }
 
+@media only screen and (min-width:1700px ){
+  div.kz-dashboard{
+    .new{
+      position: absolute;
+      right: 5rem;
+    }
+  }
+  
+}
+
 @media only screen and (max-width: 768px) {
   div.kz-dashboard {
     .main-wrapper {
